[tool.poetry]
name = "rich-torch"
version = "0.1.0"
description = "Better printing for PyTorch with Rich"
authors = ["Justin Pinkney <justinpinkney@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
rich = "^10.16.2"
torch = "*"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
